tests/expectations/compiler/signature/signature_with_wrong_types_fail.out
Error [ETYC0372117]: Expected type `signature` but type `address` was found.
    --> compiler-test:9:45
     |
   9 |         let first: bool = signature::verify(a, s, v);
     |                                             ^
Error [ETYC0372117]: Expected type `address` but type `signature` was found.
    --> compiler-test:9:48
     |
   9 |         let first: bool = signature::verify(a, s, v);
     |                                                ^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:10:37
     |
  10 |         let second: bool = s.verify(1u8, v);
     |                                     ^^^
Error [ETYC0372117]: Expected type `signature` but type `address` was found.
    --> compiler-test:15:45
     |
  15 |         let first: bool = signature::verify(a, v, s);
     |                                             ^
Error [ETYC0372117]: Expected type `address` but type `test.aleo/foo` was found.
    --> compiler-test:15:48
     |
  15 |         let first: bool = signature::verify(a, v, s);
     |                                                ^
Error [ETYC0372117]: Expected type `address` but type `test.aleo/foo` was found.
    --> compiler-test:16:37
     |
  16 |         let second: bool = s.verify(v, a);
     |                                     ^
